# rt

./: .gitignore  BRDF.hpp  BRDFRead.cpp  BUILD.sh  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  camera.cpp  camera.hpp  compile_commands.json  default.profraw  dielectric.cpp  dielectric.hpp  help.txt  hitrecord.cpp  hitrecord.hpp  image_texture.cpp  kdtree.cpp  lambertian.cpp  lambertian.hpp  light.cpp  light.hpp  main.cpp  mat3.cpp  material.hpp  metal.cpp  metal.hpp  object.cpp  object.hpp  phong.cpp  phong.hpp  plane.cpp  plane.hpp  point_light.hpp  progressbar.hpp  quad.hpp  ray.cpp  ray.hpp  rs.cpp  (+14 more)
ds/: kdtree.cpp  mat3.cpp  vec3.cpp
include/: BRDF.hpp  MERNBRDF.hpp  box.hpp  camera.hpp  checkerboard.hpp  dielectric.hpp  glossy.hpp  hitrecord.hpp  image_texture.hpp  kdtree.hpp  lambertian.hpp  light.hpp  mat3.hpp  material.hpp  mesh.hpp  metal.hpp  obj.hpp  object.hpp  phong.hpp  plane.hpp  point_light.hpp  quad.hpp  quad_light.hpp  ray.hpp  scene.hpp  scene_parser.hpp  smooth_object.hpp  solid_texture.hpp  sphere.hpp  termcolor.hpp  texture.hpp  triangle.hpp  usage.hpp  utils.hpp  vec3.hpp  world.hpp
include/lib/: catch_amalgamated.hpp  json.hpp  stb_image.hpp
include/metal/: Metal.hpp
io/: obj.cpp  scene.cpp
light/: light.cpp  point_light.cpp  quad_light.cpp
material/: BRDF.cpp  dielectric.cpp  lambertian.cpp  material.cpp  metal.cpp  phong.cpp
object/: mesh.cpp  object.cpp  plane.cpp  quad.cpp  smooth_object.cpp  sphere.cpp  triangle.cpp
pt/: BRDFRead.cpp
scripts/: BUILD  BUILD_ALL  BUILD_DEBUG  BUILD_TEST  FORMAT
src/: rply.c  utils.cpp
src/ds/: kdtree.cpp  mat3.cpp  ray.cpp  vec3.cpp
src/io/: obj.cpp
src/light/: point_light.cpp  quad_light.cpp
src/material/: BRDF.cpp  MERNBRDF.cpp  dielectric.cpp  lambertian.cpp  material.cpp  metal.cpp  phong.cpp
src/object/: mesh.cpp  object.cpp  plane.cpp  quad.cpp  smooth_object.cpp  sphere.cpp  triangle.cpp
src/scripts/: BUILD_DEBUG  BUILD_RELEASE  BUILD_TEST  CLEAN  FORMAT  RENDER  UPDATE_DEPS
src/tests/: catch_amalgamated.cpp
src/tests/kdtree/: test_kdtree.cpp
src/tests/object/: test_mesh.cpp
src/tests/utils/: test_utils.cpp
src/texture/: checkerboard.cpp  image_texture.cpp  solid_texture.cpp  texture.cpp
src/world/: camera.cpp  hitrecord.cpp  world.cpp
tests/: catch_amalgamated.cpp
texture/: checkerboard.cpp  image_texture.cpp  solid_texture.cpp  texture.cpp
world/: camera.cpp  world.cpp
